--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/ssr": "^17.0.0",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
