--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^17.3.3",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "font-awesome": "^4.7.0",
     "pg": "^8.11.5",
     "pg-promise": "^11.5.5",
     "rxjs": "~7.8.1",
